force-app/main/default/objects/TTS_Contributor__c/TTS_Contributor__c.object-meta.xml
<CustomObject>
    <description>Records a party contributing an amount to a transaction involving multiple contributors.</description>
    <label>Contributor</label>
    <nameField>
        <displayFormat>CONT{00000}</displayFormat>
        <label>Contributor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>