force-app/main/default/objects/TTS_Contributor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the contribution to the organisation providing funds.</description>
    <inlineHelpText>Select the organisation contributing to the transaction.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>