force-app/main/default/objects/TTS_Contributor__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Stores the monetary amount provided by this contributor.</description>
    <inlineHelpText>Enter the amount this contributor is providing.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>