force-app/main/default/objects/TTS_Contributor__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Captures notes about this contributor's part of the transaction.</description>
    <inlineHelpText>Enter relevant notes or terms for this individual contribution.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>