force-app/main/default/objects/TTS_Contributor__c/fields/IP_Cont_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_Cont_Payment_Reference__c</fullName>
    <description>Stores the payment reference for this individual contribution.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the payment reference used to identify this contribution.</inlineHelpText>
    <label>Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>