force-app/main/default/objects/TTS_Contributor__c/fields/IP_Contact__c.field-meta.xml
<CustomField>
    <fullName>IP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the contribution to the individual Contact providing funds.</description>
    <inlineHelpText>Select the individual Contact contributing to the transaction.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>