force-app/main/default/objects/TTS_Contributor__c/fields/IP_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>IP_Date_Time__c</fullName>
    <description>Records the date and time of the individual contribution.</description>
    <inlineHelpText>Enter the date and time when this contribution was made.</inlineHelpText>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>