force-app/main/default/objects/TTS_Contributor__c/fields/IP_Related_Transaction__c.field-meta.xml
<CustomField>
    <fullName>IP_Related_Transaction__c</fullName>
    <description>Associates the contribution with its parent Transaction.</description>
    <inlineHelpText>Select the Transaction receiving this contribution.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>TTS_Transaction__c</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>